SAK-52242 message filtering and motd loading attachment
https://sakaiproject.atlassian.net/browse/SAK-52242